--- a/kitsuneApp.html
+++ b/kitsuneApp.html
@@ -108,7 +108,7 @@
 
 			<div class="section-padding flex-center">
 				<div class="content-container">
-					<p>Through the Kitsune app you are able to track your most used routes, trip efficiency, and fitness. The smartwatch capability allows for ease of use while riding; providing the user with visualized trip information such as estimated arrival time, current trip location, and map view.</p>
+					<p>Through the Kitsune app you are able to track your most used routes, trip efficiency, and fitness. The smartwatch capability allows for ease of use while riding; providing the user with visualized trip information such as estimated arrival time, current trip location, and ride statistics.</p>
 				</div>
 			</div>
 
@@ -122,13 +122,13 @@
 			<div class="section-padding flex-center">
 				<div class="content-container">
 					<h4> [APP FUNCTIONALITY] </h4>
-					<p>While the board acts as a solid product on its own the true value come out of the sycronous use with the companion application. The Kitsune App allows users to gain multiple different improvements to their daily commute. Three overall functions act as the core basis to the Kitsune Board and App.</p>
+					<p>While the board can stand as a product on its own, the true value comes out of the synchronous use with the companion application. The Kitsune App allows users to gain multiple different improvements to their daily commute. Three key features create the core experience of the Kitsune Board and App.</p>
 
-					<p><strong>Travel Logs</strong><br>An asynchronous connection between board and app will allow users to record travel metrics after each trip. In doing so the app will gather metrics from both the user and board to create an accurate travel history. </p>
+					<p><strong>Travel Logs</strong><br>A synchronised connection between the app and board allows users to record travel metrics after each trip. In doing so, the application will gather metrics from both the user and board to create an accurate travel history.</p>
 
-					<p><strong>Smarter Trips</strong><br>The more you use the board the quicker it learns and create smarter routes. Based on past trip data the Kitsune App will be able to calculate which route would be best in current travel conditions such as weather and traffic.  </p>
+					<p><strong>Smarter Trips</strong><br>The more you use the board, the quicker it learns and creates smarter routes. Based on past trip data, the Kitsune App calculates which routes would be best in current travel conditions.</p>
 
-					<p><strong>Health / Fitness</strong><br>The app also focuses on health and fitness through calorie and goal based metrics. The Kitsune App also allows users to connect using smartwatch; this capability allows for users to track more indepth health and fitness data such as heart rate.   </p>
+					<p><strong>Health / Fitness</strong><br>The app also focuses on health and fitness through goal based metrics. Allowing users to connect through their smartwatch gives them the ability to track in-depth health and fitness data such as heart rate and calories burned.</p>
 				</div>
 			</div>
 
@@ -141,14 +141,14 @@
 			<div class="section-padding flex-center">
 				<div class="content-container">
 					<h4> [COLLABORATION] </h4>
-					<p> In the past couple years there has been a growing trend of sharing and socializing in health and fitness apps. Apps such as Nike+ Run Club and Strava allow users to create goals, track fitness statistics, but with the added bonus of recording and sharing their experience with others. </p>
+					<p> In the past fews there has been a growing trend of sharing and socializing in the health and fitness community. Apps such as Nike+ Run Club and Strava allow users to create goals, track fitness statistics, with the added bonus of recording and sharing their experience with others. </p>
 
-					<p> In a sense, not only do these apps help for individual growth and improvement but they allow users to find many individuals that are challenging themselves in the same way. Looking into a sharing capability not only allows product awareness but also creates a connected network of users experience and growing together. </p>
+					<p> In a sense, not only do these apps help with individual growth and improvement, but they allow users to find many individuals that are challenging themselves in the same way. Incorporating a sharing feature not only allows product awareness but also creates a connected network of user experiences and growth. </p>
 
 					<br><br>
 
 					<h4>[RESEARCH CONCLUSIONS]</h4>
-					<p>In order to reduce the idea of congestion in the western mentality we have to move towards sustainable design with a focus on longevity and function over temporary beauty. If we as consumers look towards new and innovative ways to understand transportation we can reduce our carbon footprint, embrace minimalism and create a sustainable society.</p>
+					<p>When looking towards the future, I wanted to explore new possibilities in human commuting behaviour that are rarely reviewed. By identifying pain points, I sought to improve upon congested areas of a user’s commute. These primarily being between transit systems where the user finds themselves walking for five to ten minutes to meet their transfer. Finding solutions to these pain points allowed me to solve the problems as a whole.</p>
 				</div>
 			</div>
 
@@ -166,7 +166,7 @@
 			<div class="section-padding flex-center">
 				<div class="content-container">
 				<h4>[INITIAL SKETCHES]</h4>
-				<p>I began by wireframing on paper first to get a general sense of how the general flow of the app. This allowed me to see how each screen would interact with the others as well as to experiement with placement of elements as well as possible sections within each screen.</p>
+				<p>I began by wireframing on paper to get a general sense of app’s flow. This allowed me to map out the user flow on a high level, and then go in with more detail for individual features.</p>
 				</div>
 			</div>
 
@@ -201,7 +201,7 @@
 				<div class="pull-tech-color grey flex-center">
 					<div class="pull-tech flex-sb">
 						<div class="pull-tech-text charcoal">
-							<h2> The Board and App communitcate through installed hardware in the body of the board. </h2>
+							<h2> The App and Board communicate through installed NFC hardware in the body of the board. </h2>
 						</div>
 						<div class="pull-tech-drawing">
 							<object type="image/svg+xml" data="images/KitsuneBoardTech3.svg"> Kitsune App Technical Drawing (Folding) </object>
@@ -213,9 +213,8 @@
 			<div class="section-padding flex-center">
 				<div class="content-container">
 				<h4>[WIREFRAMES]</h4>
-				<p><p>I began the Kitsune app by focusing on 5 key screens: Login Screen, a dashboard displaying most recent ride data, route navigation, an account page, and a ride analytic page. I chose these five screens as my starting point as they act as the entry point for many of the sub level screens. </p>
+				<p>Through the initial sketches I identified 5 key screens that act as entry points for the many sub level screens: Login, a Dashboard, Route Navigation,  an Account, and a Ride Analytic page. </p>
 
-					<p>Through these initial draft screens I was able to get a handle on how to incorporate planned features, as well as, see how features thought of in the planning phase will have to be altered or changed slightly.</p></p>
 				</div>
 			</div>
 
