--- a/kitsuneBoard.html
+++ b/kitsuneBoard.html
@@ -80,7 +80,7 @@
 			<div class="challenge-container flex-center">
 				<div class="medium-container-ch">
 					<h4 class="type-challenge">[CHALLENGE]</h4>
-					<h2> To find an effective and alternative solution to the urban commute & transportation through an engaging, user connected product. </h2>
+					<h2> To find an effective and alternative solution to the urban commute and transportation through an engaging, user-connected product.</h2>
 				</div>
 			</div>
 
@@ -100,7 +100,7 @@
 
 			<div class="section-padding flex-center">
 				<div class="content-container">
-					<p>The Kitsune Board is intended to bring forth a change in the way we see commuting. Going from point A to point B needs to become a positive, health conscious experience. I investigated how we can create a vehicle representing both social and environmental change, but at the same time allow everyone to enjoy an easier, more environmentally conscious commute.</p>
+					<p>The Kitsune Board is intended to bring forth a change in the way we see commuting. Going from point A to point B needs to become a positive, health conscious experience. I investigated how we can create a vehicle representing both social and environmental change, while at the same time allow everyone to enjoy an easier, more environmentally conscious commute.</p>
 				</div>
 			</div>
 
@@ -114,11 +114,9 @@
 			<div class="section-padding flex-center">
 				<div class="content-container">
 					<h4> [INITIAL RESEARCH] </h4>
-					<p>Instead of limiting the board through imitations of designs before it, I created a board that is compact enough for everyday use but with the goal of building a change. To reach this goal, the board itself includes a locking and folding feature which allows ease of transport and storage, as well as an integrated smart application to create a system of engaged, connected users.</p>
+					<p>By looking beyond similar, more traditional products (skateboards and Penny boards), I created a board that is compact enough for everyday use but with the goal of building a change. Two key features help this product reach this goal; the board itself has a locking and folding feature providing ease of transport and storage, as well as a companion app to create a system of engaged, connected users.</p>
 
-					<p>The Kitsune Board is directed at wide demographic but at the core is the need and interest of alternative transportation. Many living in urban centres rely heavily on the public transit system. While their current system works, I wanted to present them with improvements. Many do not have luxury of living right outside of a public transit platform; they lose valuable time in the time they take traveling between transit options.</p>
-
-					<p>When looking towards the future, I want to explore new possibilities in human commuting behaviour that are rarely reviewed. Looking at how individuals deal with their daily commute and improve on those times by finding wasted areas. These being between transit systems where the user finds themselves walking for five to ten minutes to meet their transfer. Finding solutions to these stress points will allow us to solve the problems as a whole. </p>
+					<p>The Kitsune Board is directed at a wide demographic, who are open to new products, and seeking alternative modes of transportation. Many living in urban centres rely heavily on the public transit system. While their current system works, I wanted to present them with improvements. Few have luxury of living near a public transit platform; they lose valuable time commuting to and from transit options.</p>
 				</div>
 			</div>
 
@@ -138,7 +136,7 @@
 			<div class="section-padding flex-center">
 				<div class="content-container">
 					<h4> [RESEARCH CONCLUSION] </h4>
-					<p>In order to reduce the idea of congestion in the western mentality we have to move towards sustainable design with a focus on longevity and function over temporary beauty. If we as consumers look towards new and innovative ways to understand transportation we can reduce our carbon footprint, embrace minimalism and create a sustainable society.</p>
+					<p>When looking towards the future, I wanted to explore new possibilities in human commuting behaviour that are rarely reviewed. By identifying pain points, I sought to improve upon congested areas of a user’s commute. These primarily being between transit systems where the user finds themselves walking for five to ten minutes to meet their transfer. Finding solutions to these pain points allowed me to solve the problems as a whole.</p>
 				</div>
 			</div>
 
@@ -154,11 +152,11 @@
 			<div class="section-padding flex-center">
 				<div class="content-container">
 				<h4>[COMPETITOR RESEARCH]</h4>
-					<p>For this part of the project I started by looking for reference material to help me gauge the general size and dimensions of the board. I looked for weak points in the design of current similar boards and ways to improve them. </p>
+					<p>I started by looking for reference material to help me gauge the general size and dimensions of the board. I looked for weak points in the design of similar boards and ways to improve them. </p>
 
-					<p>One of the leaders in the plastic skateboard market is Penny. Their boards are popular because of their relatively retro style and size. By looking to their design as inspiration, I could find ways to improve my own board in addition to the customer centred design focus.</p>
+					<p>One of the leaders in the plastic skateboard market is Penny. Their boards are popular because of their relatively retro style and size. By looking to their design as inspiration, I could find ways to improve my own board while focusing on human centred design approach.</p>
 
-					<p>One of the biggest challenges that I find with these styles of boards is the foot placement. In order to stick to an effective size, they made the board thin and sleek. However, with this comes discomfort in how you ride it. Because everyone has varying foot sizes, I found this issue was good starting point to work around when approaching my design.</p>
+					<p>One of the biggest challenges that I found with these styles of boards is the foot placement. In order to stick to an effective size, Penny made the board thin and sleek. However, with this comes discomfort when riding. Because everyone has varying foot sizes, I found this issue was a good starting point to focus on when approaching my design.</p>
 				</div>
 			</div>
 
@@ -172,19 +170,19 @@
 				<div class="content-container">
 					<p>I designed the general shape of the board to be 22’’ long and 6’’ wide at the apex. You’ll notice that near the front and back of the board there are two wider sections; this allows for the board to be better accommodating to individual foot placement.</p>
 
-					<p>Another key element that I wanted to explore was an idea based off the flat pack revolution. I looked for ways this product could be easily packed away and accessible. A key to this project is to focus the design around the user.</p>
+
 					<br><br>
 					<h4>[USER PERSONAS / JOB STORIES]</h4>
-					<p>In order to allow for a true understanding of the audience this product would be directed towards I created a few user personas to help identify the target audience.</p>
+					<p>In order to allow for a true understanding of the audience this product would be directed towards I created user personas to help identify the target audience.</p>
 
 					<p><strong>Jamey 20, Student</strong><br>
-					Jamey is a environmentally conscious student who regularly uses public transit. He is very conscious of his carbon footprint. As he is quite interested in technology he is comfortable exploring and trying new products. However, being a student, Jamey doesn’t have to luxury of frivolous spending. </p>
+					Jamey is an environmentally conscious student who regularly uses public transit. He is very conscious of his carbon footprint. As he is quite interested in technology, he is comfortable exploring and trying new products. However, being a student, Jamey doesn’t have a very large disposable income. </p>
 
 					<p><strong>Nancy 28, Personal Trainer</strong><br>
 					Nancy is active both during work hours and off hours. She often uses multiple apps to help during her training and workout routines. She is constantly looking for new ways to stay active. She is interested in retaining as much data about her training as possible.</p>
 
 					<p><strong>Thomas 23, Commuter</strong><br>
-					Thomas is a young professional working in the city. He lives a short distance from his transit to work and is looking for a way to help reduce travel time. He often will roller blade from his condo to his train during his commute. This solution however is cumbersome and more effort than it is worth.</p>
+					Thomas is a young professional working in the city. He lives a short distance from his transit to work and is looking for a way to help reduce travel time. He often roller blades from his condo to his train during his commute.  This solution however is bulky and inconvenient. </p>
 				</div>
 			</div>
 
@@ -207,13 +205,13 @@
 					<h4> [PRODUCT RESEARCH] </h4>
 					<p>In order to find a cohesive solution to the problems presented in the user personas I put together some key touch points I wanted to address when creating the product.</p>
 
-					<p><strong>Portability</strong><br>In Thomas’ daily commute he is require to get to and from the train station by roller blading. Once there, however, he must remove and is then tasked with carrying cumbersome rollerblade with him on this way to the office. </p>
+					<p><strong>Portability</strong><br>In Thomas’ daily commute, to reduce time, uses roller blades rather walking. Once there, however, he must remove, and carry bulky rollerblade with him on this way to the office. </p>
 
-					<p>With the Kitsune Board I wanted to look for a way to reduce this awkward nature of having to deal with the product when it was not in use. In order to do so I looked at designing it in such a way that would allow the use to fold the board and store it in their backpack. I also wanted to look for a way that the board could be easily carried if the user did not have a bag to place it in.</p>
+					<p>With the Kitsune Board I wanted to create a solution that was convenient and compact. In order to do so, I looked at designing the board in such a way that would allow for storage and portability. I also wanted to look for a way that the board could be easily carried if the user didn’t have storage available.</p>
 
-					<p><strong>Connectivity</strong><br>Nancy, like many users today gain more out the product when it is paired with a mobile component. From the beginning I knew I was not only going to be designing a physical product but an experience that would link both the user and the product together.</p>
+					<p><strong>Connectivity</strong><br>Nancy, like many users today, gain more out the product when it is paired with a mobile component. From the beginning, I knew I was not only going to be designing a physical product but an experience that would link both the user and the product together.</p>
 
-					<p>To do this I looked toward NFC Technology and a mobile component that would allow for a user to feel more engagement with the technology at hand rather than becoming a passive user. </p>
+					<p>To do this I looked toward NFC Technology and a mobile component that would allow a user to feel more engaged with the technology, rather than becoming passive. </p>
 
 					<p><strong>Functionality</strong><br>In order to build a solid product I needed to make sure that it fulfilled a multitude of user needs rather than a short list. How would the product be used by multiple different users in different ways. I understood there needed to be a strong foundation through the design and connectivity of the product in order to allow for these unique use cases to be able to take hold.</p>
 				</div>
@@ -224,9 +222,9 @@
 					<div class="pull-tech  flex-sa">
 						<div class="pull-tech-text">
 							<h4> [BRAND CREATION]</h4>
-							<p> The name Kitsune comes from the Japanese word for Fox. Common figures in Japanese folklore, the kitsune are often depicted as tricksters, but can also represent wisdom and transformation.</p>
+							<p> The name Kitsune comes from the Japanese word for fox. Common figures in Japanese folklore, the kitsune are often depicted as tricksters, but also represent wisdom and transformation.</p>
 
-							<p>A common trait related to the Kitsune is shapeshifting—a trait that I want to be prevalent when designing the skateboard. As skateboarding is sometimes seen as a unique and youthful mode of transportation, I wanted to find a brand figure that relates to those tropes, while also bringing in new traits to the product. </p>
+							<p>A common trait related to the Kitsune is shapeshifting—a trait that I wanted to be prevalent when designing the skateboard. As skateboarding is sometimes seen as a unique and youthful mode of transportation, I wanted to find a brand figure that relates to those tropes, while also bringing in new traits to the product.</p>
 						</div>
 						<div class="pull-tech-drawing-c">
 							<object type="image/svg+xml" data="images/KitsuneLogo.svg"> Kitsune Logo </object>
@@ -242,7 +240,7 @@
 					<p><strong>Mark 01</strong><br>
 					In the initial stages of the board design I started by taking my designs and importing them into Rhinoceros. While the learning curve for this program was slightly challenging, it was convenient that you could work seamlessly between Adobe Illustrator and Rhino. It allowed me to be able to design paths in Illustrator and work with them in Rhino.</p>
 
-					<p><strong>Mark 02</strong><br>For the hinge to be connected to the bottom of the board, I added two attachments to the underside of the prototype that will hold the joint in place. While the pieces may look large in this rendering, their actual height is only 1.25’’.</p>
+					<p><strong>Mark 02</strong><br>For the hinge to be connected to the bottom of the board, I added two attachments to the underside of the prototype that holds the joint in place. While the pieces may look large in this rendering, their actual height is only 1.25’’.</p>
 				</div>
 			</div>
 
@@ -276,7 +274,7 @@
 			<div class="learning-outcome-container flex-center">
 				<div class="medium-container-ch">
 					<h4 class="type-challenge">[LEARNING OUTCOME]</h4>
-					<h2> Throughout this Product's creation I was able to learn and understand the key principals of Human Centered Design and how they relate to all aspects of design. </h2>
+					<h2> Throughout this product's creation I was able to learn and understand the key principles of Human Centered Design and how they relate to all aspects of design.</h2>
 				</div>
 			</div>
 
