--- a/vitaDonationApp.html
+++ b/vitaDonationApp.html
@@ -80,7 +80,7 @@
 			<div class="challenge-container flex-center">
 				<div class="medium-container-ch">
 					<h4 class="type-challenge">[CHALLENGE]</h4>
-					<h2> To create an application that helps streamline the blood donation process, all while explaining important donation information. </h2>
+					<h2> To create an application that helps streamline the blood donation process, while also articulating key donation information to users.</h2>
 				</div>
 			</div>
 
@@ -94,7 +94,7 @@
 							<img src="images/VitaDonorAppMockup1.png" alt="Kitsune App Angled Device Mockup">
 						</div>
 						<div class="pull-tech-text-grad white">
-							<h2> The app allows donor to learn about mutliple stages of the donation process. </h2>
+							<h2> Donors are able to learn about each stage of the donation process through detailed infographics. </h2>
 						</div>
 					</div>
 				</div>
@@ -105,7 +105,8 @@
 
 			<div class="section-padding flex-center">
 				<div class="content-container">
-					<p>This blood donation information app is meant to act as a way for donors to understand the donation process during the wait period in a donation clinic. iPad stations could be transported along to each donor site, allowing individuals easy access to the relevant information. </p> <p> The app includes information about pre- and post-donation procedures, interactive blood typing info-graph, common deferral information, as well as future donation booking on the final screen.  </p>
+					<p>This app is meant to act as a bridge between donors and the blood donation process. Meant to be displayed on iPads, these stations could be transported along to each donor site, allowing individuals easy access to the relevant information.</p>
+					<p> The app includes information about pre- and post-donation procedures, interactive blood typing info-graph, and common deferral information. Once the process is complete, users are able to book their next appointment.</p>
 				</div>
 			</div>
 
@@ -119,7 +120,7 @@
 			<div class="section-padding flex-center">
 				<div class="content-container">
 					<h4> [PRINT VERSION] </h4>
-					<p>Physical information pamphlets would also be offered to those interested in a take-home alternative. These pamphlets cover the same information while at the same time offering a unique user experience from the iPad experience.</p>
+					<p>Physical information pamphlets would also be offered to those interested in a take-home alternative. These pamphlets cover the same information, while at the same time offering a unique user experience.</p>
 				</div>
 			</div>
 
@@ -140,7 +141,7 @@
 			<div class="learning-outcome-container flex-center">
 				<div class="medium-container-ch">
 					<h4 class="type-challenge">[LEARNING OUTCOME]</h4>
-					<h2> I was able to gain a greater understanding on presenting complex topics in a way that it could be understood by a general audience.</h2>
+					<h2> I was able to gain a greater understanding on how to present complex topics to a broader audience.</h2>
 				</div>
 			</div>
 
