--- a/kitsuneBoard.html
+++ b/kitsuneBoard.html
@@ -157,21 +157,26 @@
 					<p>One of the leaders in the plastic skateboard market is Penny. Their boards are popular because of their relatively retro style and size. By looking to their design as inspiration, I could find ways to improve my own board while focusing on human centred design approach.</p>
 
 					<p>One of the biggest challenges that I found with these styles of boards is the foot placement. In order to stick to an effective size, Penny made the board thin and sleek. However, with this comes discomfort when riding. Because everyone has varying foot sizes, I found this issue was a good starting point to focus on when approaching my design.</p>
+					<p>I designed the general shape of the board to be 22’’ long and 6’’ wide at the apex. You’ll notice that near the front and back of the board there are two wider sections; this allows for the board to be better accommodating to individual foot placement.</p>
 				</div>
 			</div>
 
-			 <div class="section-full flex-center">
-				<div class="medium-container">
-							<object type="image/svg+xml" data="images/KitsuneBoardOutline.svg"> Kitsune Board Outline </object>
+			<div class="section-full flex-center">
+				<div class="pull-tech-color grey flex-center">
+					<div class="pull-tech flex-sb">
+						<div class="pull-tech-text charcoal">
+							<h2> The bottom grip pattern of the board represents the nine tails of the Kitsune Fox. </h2>
+						</div>
+						<div class="pull-tech-drawing">
+							<object type="image/svg+xml" data="images/KitsuneBoardTech2.svg"> Kitsune App Technical Drawing (Folding) </object>
+						</div>
+					</div>
 				</div>
 			</div>
 
 			<div class="section-padding flex-center">
 				<div class="content-container">
-					<p>I designed the general shape of the board to be 22’’ long and 6’’ wide at the apex. You’ll notice that near the front and back of the board there are two wider sections; this allows for the board to be better accommodating to individual foot placement.</p>
 
-
-					<br><br>
 					<h4>[USER PERSONAS / JOB STORIES]</h4>
 					<p>In order to allow for a true understanding of the audience this product would be directed towards I created user personas to help identify the target audience.</p>
 
@@ -203,7 +208,7 @@
 			<div class="section-padding flex-center">
 				<div class="content-container">
 					<h4> [PRODUCT RESEARCH] </h4>
-					<p>In order to find a cohesive solution to the problems presented in the user personas I put together some key touch points I wanted to address when creating the product.</p>
+					<p>In order to find a cohesive solution to the problems presented in the user personas I put together a couple of key touch points I wanted to address when creating the product.</p>
 
 					<p><strong>Portability</strong><br>In Thomas’ daily commute, to reduce time, uses roller blades rather walking. Once there, however, he must remove, and carry bulky rollerblade with him on this way to the office. </p>
 
@@ -212,8 +217,6 @@
 					<p><strong>Connectivity</strong><br>Nancy, like many users today, gain more out the product when it is paired with a mobile component. From the beginning, I knew I was not only going to be designing a physical product but an experience that would link both the user and the product together.</p>
 
 					<p>To do this I looked toward NFC Technology and a mobile component that would allow a user to feel more engaged with the technology, rather than becoming passive. </p>
-
-					<p><strong>Functionality</strong><br>In order to build a solid product I needed to make sure that it fulfilled a multitude of user needs rather than a short list. How would the product be used by multiple different users in different ways. I understood there needed to be a strong foundation through the design and connectivity of the product in order to allow for these unique use cases to be able to take hold.</p>
 				</div>
 			</div>
 
@@ -237,39 +240,12 @@
 			<div class="section-padding flex-center">
 				<div class="content-container">
 					<h4> [CREATION / PROTOTYPING] </h4>
-					<p><strong>Mark 01</strong><br>
-					In the initial stages of the board design I started by taking my designs and importing them into Rhinoceros. While the learning curve for this program was slightly challenging, it was convenient that you could work seamlessly between Adobe Illustrator and Rhino. It allowed me to be able to design paths in Illustrator and work with them in Rhino.</p>
+					<p>In order to take my drawings and illustrator wires a physical products I used the 3D fabrication program Rhino. By building the centeral elements in Illustrator I was able to import and work seamlessly between the two. </p>
+					<p>After 5 prototype versions I handed off the model to Shapeways, a 3D printing company in New York. They used a <a href="https://youtu.be/BTTnaI4EYnY" target="_blank"> powered plastic 3D printing process </a> to produce the board. This method provided a stronger final product than that offered using the standard consumer injection mold process. After receiving the two 3D printed pieces, I attached the hinge and wheel hardware completing the board. </p>
 
-					<p><strong>Mark 02</strong><br>For the hinge to be connected to the bottom of the board, I added two attachments to the underside of the prototype that holds the joint in place. While the pieces may look large in this rendering, their actual height is only 1.25’’.</p>
 				</div>
 			</div>
 
-			<div class="section-full flex-center">
-				<div class="pull-tech-color grey flex-center">
-					<div class="pull-tech flex-sb">
-						<div class="pull-tech-text charcoal">
-							<h2> The bottom grip pattern of the board represents the nine tails of the Kitsune Fox. </h2>
-						</div>
-						<div class="pull-tech-drawing">
-							<object type="image/svg+xml" data="images/KitsuneBoardTech2.svg"> Kitsune App Technical Drawing (Folding) </object>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="section-padding flex-center">
-				<div class="content-container">
-					<h4> [CREATION / PROTOTYPING] </h4>
-					<p><strong>Mark 03</strong><br>
-					In order to improve upon the previous design, I have made the board thicker to give it additional strength. As the board thickens it tapers slightly to allow for a sleeker product. When fabricating Mark 2 I was not satisfied with the curve of the board and for this prototype I decided to make it more drastic.</p>
-
-					<p>As this was another big stage in the design process I decided to fabricate this prototype and attach the wheels. By measuring the placement on Mark 2, I was able to position them on the board in a way that allows them to line up.</p>
-
-					<p><strong>Mark 04</strong><br>In order to improve upon the previous design, I have made the board thicker to give it additional strength. As the board thickens it tapers slightly to allow for a sleeker product. When fabricating Mark 2 I was not satisfied with the curve of the board and for this prototype I decided to make it more drastic. </p>
-
-					<p>As this was another big stage in the design process I decided to fabricate this prototype and attach the wheels. By measuring the placement on Mark 2, I was able to position them on the board in a way that allows them to line up.</p>
-				</div>
-			</div>
 
 			<div class="learning-outcome-container flex-center">
 				<div class="medium-container-ch">
