--- a/kitsuneBoard.html
+++ b/kitsuneBoard.html
@@ -208,7 +208,7 @@
 			<div class="section-padding flex-center">
 				<div class="content-container">
 					<h4> [PRODUCT RESEARCH] </h4>
-					<p>In order to find a cohesive solution to the problems presented in the user personas I put together a couple of key touch points I wanted to address when creating the product.</p>
+					<p>To find a cohesive solution to the problems presented in the user personas I put together a couple of key touch points I wanted to address when creating the product.</p>
 
 					<p><strong>Portability</strong><br>In Thomas’ daily commute, to reduce time, uses roller blades rather walking. Once there, however, he must remove, and carry bulky rollerblade with him on this way to the office. </p>
 
@@ -240,8 +240,8 @@
 			<div class="section-padding flex-center">
 				<div class="content-container">
 					<h4> [CREATION / PROTOTYPING] </h4>
-					<p>In order to take my drawings and illustrator wires a physical products I used the 3D fabrication program Rhino. By building the centeral elements in Illustrator I was able to import and work seamlessly between the two. </p>
-					<p>After 5 prototype versions I handed off the model to Shapeways, a 3D printing company in New York. They used a <a href="https://youtu.be/BTTnaI4EYnY" target="_blank"> powered plastic 3D printing process </a> to produce the board. This method provided a stronger final product than that offered using the standard consumer injection mold process. After receiving the two 3D printed pieces, I attached the hinge and wheel hardware completing the board. </p>
+					<p>To take my drawings and illustrator wires to a physical product, I used the 3D fabrication program Rhino. By building the centeral elements in Illustrator, I was able to import and work seamlessly between the two programs. </p>
+					<p>After 5 prototype versions, I handed off the model to Shapeways, a 3D printing company in New York. They used a <a href="https://youtu.be/BTTnaI4EYnY" target="_blank"> powered plastic 3D printing process </a> to produce the board. This method provided a stronger final product than that offered using the standard consumer injection mold process. After receiving the two 3D printed pieces, I attached the hinge and wheel hardware, completing the board. </p>
 
 				</div>
 			</div>
