--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
 					<p class="larger-p">I’m a designer, space enthusiast, and advocate for using design as a practice to improve the lives of everyone. <!--and people watcher. --></h3>
 					<p> I have always been drawn to understanding how people and products interact. Whether that’s myself struggling for the third time that day to pull a push door, or watching my friends decide if a cold brew at 4pm is the right decision, each makes me rethink the potential for better solutions.  </p>
 					<p>I live and work in Toronto, where I've been designing digital experiences at <a href="http://www.konradgroup.com" target="_blank">Konrad Group</a> since my graduation from the <a href="http://design.ampd.yorku.ca/" target="_blank"> York / Sheridan’s Bachelor of Design</a> program. I’ve also recently re-entered the world of code and am working on some exciting side projects with my friends through a design collective called <a href="http://smolhax.co" target="_blank"> Smolhax. </a></p>
+					<p>I’m always interested in trying new things or collaborating on projects. If you’d like to get ahold of me, shoot over an email to <a href="mailto:brockmdonaldson@gmail.com"> brockmdonaldson@gmail.com</a>. </p>
 					<p>✌️️ </p>
 					<div class="social-about">
 						<ul class="social-links">
